# QtQuickDateFrom

./: CMakeLists.txt  DatePicker.qml  HomeForm.qml  Page1Form.qml  QtQuickDateFrom.desktop  QtQuickDateFrom_French.ts  QtQuickDateFrom_German.ts  QtQuickDateFrom_Italian.ts  QtQuickDateFrom_Portuguese.ts  QtQuickDateFrom_Spanish.ts  README.md  main.cpp  main.qml  qml.qrc
